plex-media-server/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-app
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: plex-media-server
    spec:
      affinity: {}
      containers:
      - name: pms-app
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: pms
          protocol: TCP
        resources:
          requests:
            cpu: "1000m"
            memory: "768Mi"
          limits:
            cpu: "4000m"
            memory: "4096Mi"
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /transcode
          name: pms-transcode
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
      volumes:
      - name: pms-transcode
        emptyDir: {}
