plex-media-server/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pms-web
spec:
  type: ClusterIP
  selector:
    app: plex-media-server
  ports:
    - port: 32400
