plex-media-server/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: plex.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pms-web
            port:
              number: 32400
